cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
set( ${OpenCV_INCLUDE_DIRS} /usr/include/opencv/)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage testGHT.cpp)
SET(OpenCV_LIBS opencv_core opencv_highgui opencv_imgproc)
target_link_libraries( DisplayImage ${OpenCV_LIBS} )